kubernetes/apps/kubevirt/kubevirt/operator/images.yaml
---
# yayamlls-disable-file
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virt-operator
  namespace: kubevirt
spec:
  template:
    spec:
      containers:
        - name: virt-operator
          image: quay.io/kubevirt/virt-operator:v1.9.0@sha256:d08b5b5ad1c0d694fad13279e44b44b6fad961aa7508acd53b87ce6ef468cbae
